--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,11 @@
 			<artifactId>log4j-api</artifactId>
 			<version>2.23.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-testng</artifactId>
+			<version>7.14.0</version> <!-- or latest -->
+		</dependency>
 
 	</dependencies>
 	<build>
@@ -86,11 +90,12 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testnglearning.xml</suiteXmlFile>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 					<includes>
 						<include>**/*.java</include>
 					</includes>
+					<reportsDirectory>${project.build.directory}/test-output</reportsDirectory>
 				</configuration>
 			</plugin>
 		</plugins>
